# CRUD-Operation

./: Dockerfile  alembic.ini  crud_logger.py  docker-compose.yml  pyproject.toml
app/: main.py
config/: config.py
constants/: constants.py
crud/: crud.py
database/: database.py
migrations/versions/: 90b716291973_create_users_table.py
models/: models.py
schemas/: schemas.py
tests/: test_mysql_database_connection.py
