[tool.poetry]
name = "mysql-database-connection"
version = "0.1.0"
description = ""
authors = ["Abhijit-Mangale-Everestek <abhijit.mangale@everestek.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
PyMySQL = "^1.0.2"
fastapi-pagination = "^0.9.1"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
